<resources>
    <string name="app_name">Autobot</string>

    <string name="solgan">Autobot\n always by your side</string>
    <string name="please_input_phone_number">Please input phone number</string>
    <string name="log_in">Log in</string>
    <string name="no_account">No account?</string>
    <string name="logo">logo</string>
    <string-array name="AccountType">
        <item>Phone Number</item>
        <item>User Name</item>
    </string-array>
...
